<resources>
    <string name="app_name">TemporaryAccomodation</string>
    <string name="email_id_tv">Email: *</string>
    <string name="password_id_tv">Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your Password</string>
    <string name="login_buuton_text">Login</string>
    <string name="register_tv_text">Not a member? Register!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_title">Register!</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="list_string">Accommodation List</string>
    <string name="add_temp_string">Add accommodation</string>
    <string name="logout_string">Logout</string>
    <string name="contact_tv">Contact Details: </string>
    <string name="phone_tv_string">Phone:</string>
    <string name="desc_tv_string">Description: *</string>
    <string name="phone_hint_et">Enter you phone number</string>
    <string name="desc_hint_string">Enter description about the apartment</string>
    <string name="address_tv_string">Address: *</string>
    <string name="address_hint_string">Enter your address</string>
    <string name="submit_button_string">Submit</string>
    <string name="req_tv_string">* Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
