<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/contact_tv" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:text="@string/email_id_tv" />

        <EditText
            android:id="@+id/email_et_id"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:text="@string/phone_tv_string" />

        <EditText
            android:id="@+id/phone_et_id"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint_et"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_tv_string"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/desc_et_id"
            android:layout_height="100dp"
            android:hint="@string/desc_hint_string"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_tv_string"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/address_et_id"
            android:layout_height="100dp"
            android:hint="@string/address_hint_string"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="32dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_tv_string"
        android:layout_marginStart="40dp"
        />


    <Button
        android:id="@+id/detail_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/submit_button_string" />










</LinearLayout>